[metadata]
name = gcl_looper
summary = Looper is a daemonizer library, it can help you with lifecycle of your daemon.
description_file =
    README.md
long_description_content_type = text/markdown
author = Genesis Corporation
author_email = mail@gmelikov.ru
home_page = https://github.com/infraguys/gcl_looper
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[files]
packages =
    gcl_looper

[entry_points]
console_scripts =
    gcl-looper-launchpad-service = gcl_looper.cmd.launchpad:main
